--- a/V2RayX/Base.lproj/MainMenu.xib
+++ b/V2RayX/Base.lproj/MainMenu.xib
@@ -24,6 +24,7 @@
                 <outlet property="serverListMenu" destination="eqU-gH-G4L" id="unc-2a-DIW"/>
                 <outlet property="serversItem" destination="3wi-Co-2Kd" id="kKi-8l-dDJ"/>
                 <outlet property="statusBarMenu" destination="yZm-2L-r3v" id="3iW-vb-TOn"/>
+                <outlet property="upgradeMenuItem" destination="29h-Cl-9kt" id="Fk0-Xq-OK0"/>
                 <outlet property="v2rayRulesItem" destination="bUi-AV-IfA" id="p4V-ny-gh7"/>
                 <outlet property="v2rayStatusItem" destination="EFa-yl-fQC" id="z3V-zp-jw7"/>
             </connections>
@@ -757,6 +758,12 @@
                     </connections>
                 </menuItem>
                 <menuItem isSeparatorItem="YES" id="YAD-DW-T91"/>
+                <menuItem title="Upgrade" id="29h-Cl-9kt">
+                    <modifierMask key="keyEquivalentModifierMask"/>
+                    <connections>
+                        <action selector="openReleasePage:" target="Voe-Tx-rLC" id="gMF-8x-ynd"/>
+                    </connections>
+                </menuItem>
                 <menuItem title="Help" id="Yq1-i5-ecF">
                     <modifierMask key="keyEquivalentModifierMask"/>
                     <connections>
